@@ -15,7 +15,6 @@ print 'Test # %d' % ntest
 
 dsname, src = 'exp=cxif5315:run=169', 'CxiDs2.0:Cspad.0'
 if ntest==2 : dsname, src = 'exp=meca1113:run=376', psana.Source('DetInfo(MecTargetChamber.0:Cspad2x2.1)')
-
 print 'Example for\n  dataset: %s\n  source : %s' % (dsname, src)
 
 #psana.setOption('psana.calib-dir', './calib')
